Implement cheese detail page

--- a/everycheese/templates/cheeses/cheese_list.html
+++ b/everycheese/templates/cheeses/cheese_list.html
@@ -10,7 +10,7 @@
 
 <ul>
 {% for cheese in cheese_list %}
-    <li><a href="#TODO">{{ cheese.name }}</a></li>
+    <li><a href="{% url 'cheeses:detail' cheese.slug %}">{{ cheese.name }}</a></li>
 {% endfor %}
 </ul>
 
