Add cheese update view, modify template

--- a/everycheese/templates/cheeses/cheese_detail.html
+++ b/everycheese/templates/cheeses/cheese_detail.html
@@ -32,8 +32,11 @@
 {% endif %}
 
 
-
-
+<p>
+    <a class="btn btn-primary" href="{% url 'cheeses:update' cheese.slug %}" role="button">
+        Update
+    </a>
+</p>
 
 
 
