--- a/everycheese/templates/cheeses/cheese_form.html
+++ b/everycheese/templates/cheeses/cheese_form.html
@@ -1,19 +1,20 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Add Cheese{% endblock title %}
+{% block title %}{{ view.action|default:"Action" }} Cheese{% endblock title %}
 
 {% block content %}
+{% with action=view.action|default:"Add"%}
 
 
-<h1>Add Cheese</h1>
+<h1>{{ action }} Cheese</h1>
 
-<form method="post" action="{% url 'cheeses:add' %}">
+<form method="post" action=".">
 {% csrf_token %}
 
 {{ form|crispy }}
 
-<button type="submit" class="btn btn-primary">Save</button>
+<button type="submit" class="btn btn-primary">{{ action }}</button>
 </form>
 
 
@@ -24,5 +25,5 @@
 
 
 
-
+{% endwith %}
 {% endblock content %}
